(Landing) Small tweak (@assembly) Fix: Disabled placeholder color is too faded on Safari (@assembly) Auth card styles small tweak

--- a/src/@assembly/styles/base/_preflight.scss
+++ b/src/@assembly/styles/base/_preflight.scss
@@ -271,3 +271,9 @@ img {
     width: 100%;
     vertical-align: top;
 }
+
+// Fix: Disabled placeholder color is too faded on Safari
+input[disabled] {
+    opacity: 1;
+    -webkit-text-fill-color: currentColor;
+}
